# stm32f1xx-rust-i2c-scanner

./: Cargo.toml  README.md
.cargo/: config
src/: main.rs
